refactor(exercice-control): Update `pom.xml`
[DETAILS]
- none